--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,11 @@
 /********** Template CSS **********/
-
-p{
-    color: black;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    
-}
-
-
-h4{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: purple;
-    letter-spacing: 0.3px;
-    word-spacing: 0.9px;
-    font-weight: 700;
-}
-
-h1{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: black;
-    
-    letter-spacing: 0.3px;
-    word-spacing: 0.9px;
-    font-weight: 700;
-}
-
- h2, h3{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: black;
-    letter-spacing: 0.3px;
-    word-spacing: 0.9px;
-    font-weight: 700;
-}
-
 :root {
     --primary: #B78D65;
-    
     --light: #F8F8F8;
     --dark: #252525;
 }
 
-/* h1,
+h1,
 h2,
 .h1,
 .h2,
@@ -61,7 +27,7 @@ h6,
 .h6,
 .fw-normal {
     font-weight: 400 !important;
-} */
+}
 
 .back-to-top {
     position: fixed;
@@ -135,13 +101,6 @@ h6,
 }
 
 
-/* .btn{
-    background-color: black;
-    outline: none;
-    border: none;
-} */
-
-
 /*** Navbar ***/
 .navbar .dropdown-toggle::after {
     border: none;
@@ -153,7 +112,7 @@ h6,
 }
 
 .navbar .navbar-nav .nav-link {
-    margin-right: 24px;
+    margin-right: 30px;
     padding: 30px 0;
     color: var(--dark);
     font-weight: 500;
@@ -303,7 +262,6 @@ h6,
     background: #FFFFFF;
     border-radius: 120px;
     transition: .5s;
-    border: 1px solid black;
 }
 
 .fact-item:hover .fact-icon {
