--- a/css/style.css
+++ b/css/style.css
@@ -34,9 +34,42 @@ h6,
     display: none;
     right: 30px;
     bottom: 30px;
-    z-index: 99;
+    z-index: 100;
 }
 
+.back-to-top img {
+    width: 60px;
+    border-radius: 7px;
+}
+
+.wa-float {
+    width: 200px;
+    background-color: white;
+    position: fixed;
+    bottom: 20px;
+    right: 100px;
+    border-radius: 10px;
+    border: 1px solid #196a33;
+    padding: 10px;
+}
+
+.wa-float a {
+    color: #196a33;
+}
+
+.wa-float .bi-x {
+    color: #196a33;
+    cursor: pointer;
+    display: flex;
+    justify-content: right;
+    font-size: 22px;
+    transition: 0.3s;
+    height: 20px;
+}
+
+.wa-float .bi-x:hover {
+    transform: translateY(-2px);
+}
 
 /*** Spinner ***/
 #spinner {
@@ -561,4 +594,125 @@ h6,
 
 .footer .copyright a:hover {
     color: var(--primary);
+}
+
+
+/* Slider */
+
+.row-cus {
+    background-color: #ececec;
+    background-color: rgba(0, 0, 0, 0.85);
+    padding: 20px 0;
+    margin: 30px 0;
+}
+
+.slick-slide {
+    margin: 0px 20px;
+}
+
+.slick-slide img {
+    width: 100%;
+}
+
+.slick-slider {
+    position: relative;
+    display: block;
+    box-sizing: border-box;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-touch-callout: none;
+    -khtml-user-select: none;
+    -ms-touch-action: pan-y;
+    touch-action: pan-y;
+    -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list {
+    position: relative;
+    display: block;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
+
+.slick-list:focus {
+    outline: none;
+}
+
+.slick-list.dragging {
+    cursor: pointer;
+    cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    -o-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+}
+
+.slick-track {
+    position: relative;
+    top: 0;
+    left: 0;
+    display: block;
+}
+
+.slick-track:before,
+.slick-track:after {
+    display: table;
+    content: '';
+}
+
+.slick-track:after {
+    clear: both;
+}
+
+.slick-loading .slick-track {
+    visibility: hidden;
+}
+
+.slick-slide {
+    display: none;
+    float: left;
+    height: 100%;
+    min-height: 1px;
+}
+
+[dir='rtl'] .slick-slide {
+    float: right;
+}
+
+.slick-slide img {
+    display: block;
+}
+
+.slick-slide.slick-loading img {
+    display: none;
+}
+
+.slick-slide.dragging img {
+    pointer-events: none;
+}
+
+.slick-initialized .slick-slide {
+    display: block;
+}
+
+.slick-loading .slick-slide {
+    visibility: hidden;
+}
+
+.slick-vertical .slick-slide {
+    display: block;
+    height: auto;
+    border: 1px solid transparent;
+}
+
+.slick-arrow.slick-hidden {
+    display: none;
 }
